h2. 0.2.1

* support to fill_in float, fixnum into textfield
* fill_in select with just a number
* see selected number within select_tag
* checking order on page - can handle duplicates in both sides ( definition and page )

h2. 0.2.0

rewrite of kemeleon from scratch

* with support for
** rack test
** selenium -> firefox
** capybara-webkit -> webkit based browsers

* and new dsl
 checkout spec/integration tests for examples

h2. 0.0.9

* test suite running against selenium (except multiple selectors scope)
* headless testing
* session reuse (performance)

h2. 0.0.8

* fixing problem with selenium (quick-fix) by turning off field testing

h2. 0.0.7

* Travis-CI integrated
* fix issues on 1.8.7
* added Gemfile

h2. 0.0.6

* test refactoring
* updating readme
* adding examples from spree

h2. 0.0.5

* basic testing approaches and matchers  implemented