@@ -9,3 +9,4 @@ gem 'headless'
 gem 'mime-types'
 gem 'libnotify'
 gem 'capybara-webkit'
+gem 'pry'
