@@ -1,6 +1,7 @@
 require 'kameleon'
 require 'kameleon/ext/rspec/all'
 require 'capybara/webkit'
+require 'pry'
 
 Dir["#{File.expand_path("../", __FILE__)}/support/**/*.rb"].each { |f| require f }
 
@@ -11,3 +12,4 @@ end
 Kameleon.configure do |c|
   c.assets_dir = File.join(File.expand_path("../", __FILE__), 'fixtures', 'assets')
 end
+
